[gd_scene load_steps=5 format=3 uid="uid://cgurdmsiyksr8"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_4sm32"]
[ext_resource type="Texture2D" uid="uid://cj7g2ekgjnbwr" path="res://Texture/love-shield.png" id="1_8ks76"]
[ext_resource type="Texture2D" uid="uid://6poqds66duyg" path="res://Texture/Coin/coin_01.png" id="1_jvwq3"]
[ext_resource type="Texture2D" uid="uid://hbjoihi1d50k" path="res://UI/HurtUI.png" id="3_mrdft"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1278.0
offset_bottom = 719.0
script = ExtResource("1_4sm32")

[node name="HealthSprite" type="Sprite2D" parent="."]
position = Vector2(28, 23)
scale = Vector2(0.139963, 0.139963)
texture = ExtResource("1_8ks76")

[node name="HealthLabel" type="Label" parent="."]
modulate = Color(0.96, 0, 0.0159998, 1)
layout_mode = 0
offset_left = 59.0
offset_right = 345.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 38
text = "100"

[node name="PointSprite" type="Sprite2D" parent="."]
position = Vector2(1254, 24)
texture = ExtResource("1_jvwq3")

[node name="PointsLabel" type="Label" parent="."]
modulate = Color(1, 0, 0.0166664, 1)
layout_mode = 0
offset_left = 1001.0
offset_right = 1212.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 38
text = "0"
horizontal_alignment = 2

[node name="WinLosePanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1279.0
offset_bottom = 719.0

[node name="WinLoseLabel" type="Label" parent="WinLosePanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 116.0
offset_right = 870.0
offset_bottom = 215.0
theme_override_font_sizes/font_size = 60
text = "NULL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HurtPanel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.308)
layout_mode = 0
offset_right = 1279.0
offset_bottom = 721.0

[node name="Sprite2D" type="Sprite2D" parent="HurtPanel"]
position = Vector2(640.111, 359.75)
scale = Vector2(0.554591, 0.555941)
texture = ExtResource("3_mrdft")

[node name="ExitGameTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="ExitGameTimer" to="." method="_on_exit_game_timer_timeout"]
